--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <style>
 
     html { 
-  background: url(/Ressource/BackgroundAcceuil.jpg) no-repeat center center fixed; 
+  background: url(./Ressource/BackgroundAcceuil.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
